--- a/06-ToDo-MVC/src/public/css/styles.css
+++ b/06-ToDo-MVC/src/public/css/styles.css
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 *,
@@ -75,6 +76,10 @@ input[type="text"] {
     margin: 10px 0;
     padding: 20px;
     position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .task-list li.completed {
