--- a/06-ToDo-MVC/src/views/layout.pug
+++ b/06-ToDo-MVC/src/views/layout.pug
@@ -5,8 +5,8 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title #{title} 
         link(rel="icon" href="/img/icon.svg")
-        link(rel="stylesheet" href="css/normalize.css")
-        link(rel="stylesheet" href="css/styles.css")
+        link(rel="stylesheet" href="/css/normalize.css")
+        link(rel="stylesheet" href="/css/styles.css")
     body
         block content
         script(src="/js/app.js")
