Update package.json dependencies

--- a/11-E-commerce/src/views/index.pug
+++ b/11-E-commerce/src/views/index.pug
@@ -9,160 +9,161 @@ head
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap' rel='stylesheet')
     link(rel='stylesheet' href='/css/app.css')
-header
-    h1.title
-        span Guitar
-        |  Store
-nav.navigation
-    ul.container.container-ul
-        li
-            a(href='index.html') Home
-        li
-            a(href='about.html') About Us
-        li
-            a(href='products.html') Shop
-        li
-            a(href='blog.html') Blog
-        li
-            a(href='contact.html') Contact Us
-.hero
-section.container.categories
-    h2 Categories
-    .list-categories
-        .category
-            .img
-                img(src='/img/category1.webp' alt='Electric Guitars')
-            a(href='') Electric Guitars
-        .category
-            .img
-                img(src='/img/category2.webp' alt='Acoustic Guitars')
-            a(href='') Acoustic Guitars
-        .category
-            .img
-                img(src='/img/category3.webp' alt='Accessories')
-            a(href='') Accessories
-section.about-us
-    .container.about-grid
-        .about-text
-            h2 About Us
-            p
-                | Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-                | dignissimos obcaecati illum nulla commodi dolore temporibus
-                | architecto dolorum, sunt laborum mollitia tempora qui nisi.
-            p
-                | Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                | Voluptatum molestiae dolorum commodi nobis accusantium!
-main.main-content.container
-    h2 Our Products
-    .list-products
-        article.product
-            img.product-img(src='/img/product18.png' alt='product 0')
-            .product-text
-                h3 Product 0
+body
+    header
+        h1.title
+            span Guitar
+            |  Store
+    nav.navigation
+        ul.container.container-ul
+            li
+                a(href='index.html') Home
+            li
+                a(href='about.html') About Us
+            li
+                a(href='products.html') Shop
+            li
+                a(href='blog.html') Blog
+            li
+                a(href='contact.html') Contact Us
+    .hero
+    section.container.categories
+        h2 Categories
+        .list-categories
+            .category
+                .img
+                    img(src='/img/category1.webp' alt='Electric Guitars')
+                a(href='') Electric Guitars
+            .category
+                .img
+                    img(src='/img/category2.webp' alt='Acoustic Guitars')
+                a(href='') Acoustic Guitars
+            .category
+                .img
+                    img(src='/img/category3.webp' alt='Accessories')
+                a(href='') Accessories
+    section.about-us
+        .container.about-grid
+            .about-text
+                h2 About Us
                 p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product2.webp' alt='product 2')
-            .product-text
-                h3 Product 2
+                    | Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+                    | dignissimos obcaecati illum nulla commodi dolore temporibus
+                    | architecto dolorum, sunt laborum mollitia tempora qui nisi.
                 p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product11.webp' alt='product 1')
-            .product-text
-                h3 Product 18
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product4.webp' alt='product 4')
-            .product-text
-                h3 Product 4
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product3.webp' alt='product 3')
-            .product-text
-                h3 Product 3
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product17.png' alt='product 1')
-            .product-text
-                h3 Product 17
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product5.webp' alt='product 5')
-            .product-text
-                h3 Product 5
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product14.webp' alt='product 5')
-            .product-text
-                h3 Product 5
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product15.webp' alt='product 6')
-            .product-text
-                h3 Product 3
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-        article.product
-            img.product-img(src='/img/product16.png' alt='product 6')
-            .product-text
-                h3 Product 3
-                p
-                    | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
-                    | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
-                    | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
-footer.footer
-    .container.grid-footer
-        div
-            h3 Categories
-            ul
-                li
-                    a(href='#') Electric Guitars
-                li
-                    a(href='#') Acoustic Guitars
-                li
-                    a(href='#') Accessories
-                // ...
-        div
-            h3 About Us
-            ul
-                li
-                    a(href='about-us.html') Our Story
-                li
-                    a(href='mission-vision.html') Our Mission and Vision
-                // ...
-        div
-            h3 Support
-            ul
-                li
-                    a(href='#') Contact Us
-                li
-                    a(href='#') FAQ
-                li
-                    a(href='#') Shipping Information
-                // ...
-    p &copy; 2023 | Eder Benites
+                    | Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    | Voluptatum molestiae dolorum commodi nobis accusantium!
+    main.main-content.container
+        h2 Our Products
+        .list-products
+            article.product
+                img.product-img(src='/img/product18.png' alt='product 0')
+                .product-text
+                    h3 Product 0
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product2.webp' alt='product 2')
+                .product-text
+                    h3 Product 2
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product11.webp' alt='product 1')
+                .product-text
+                    h3 Product 18
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product4.webp' alt='product 4')
+                .product-text
+                    h3 Product 4
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product3.webp' alt='product 3')
+                .product-text
+                    h3 Product 3
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product17.png' alt='product 1')
+                .product-text
+                    h3 Product 17
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product5.webp' alt='product 5')
+                .product-text
+                    h3 Product 5
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product14.webp' alt='product 5')
+                .product-text
+                    h3 Product 5
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product15.webp' alt='product 6')
+                .product-text
+                    h3 Product 3
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+            article.product
+                img.product-img(src='/img/product16.png' alt='product 6')
+                .product-text
+                    h3 Product 3
+                    p
+                        | Donec dapibus risus non efficitur facilisis. Etiam ac vulputate
+                        | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
+                        | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
+    footer.footer
+        .container.grid-footer
+            div
+                h3 Categories
+                ul
+                    li
+                        a(href='#') Electric Guitars
+                    li
+                        a(href='#') Acoustic Guitars
+                    li
+                        a(href='#') Accessories
+                    // ...
+            div
+                h3 About Us
+                ul
+                    li
+                        a(href='about-us.html') Our Story
+                    li
+                        a(href='mission-vision.html') Our Mission and Vision
+                    // ...
+            div
+                h3 Support
+                ul
+                    li
+                        a(href='#') Contact Us
+                    li
+                        a(href='#') FAQ
+                    li
+                        a(href='#') Shipping Information
+                    // ...
+        p &copy; 2023 | Eder Benites
