refactor: Update routes and views for improved code organization and consistency

--- a/11-E-commerce/src/views/contact.pug
+++ b/11-E-commerce/src/views/contact.pug
@@ -15,15 +15,15 @@ header
 nav.navigation
     ul.container
         li
-            a(href='index.html') Home
+            a(href='/index') Home
         li
-            a(href='about.html') About Us
+            a(href='/about') About Us
         li
-            a(href='products.html') Shop
+            a(href='/products') Shop
         li
-            a(href='blog.html') Blog
+            a(href='/blog') Blog
         li
-            a(href='contact.html') Contact Us
+            a(href='/contact') Contact Us
 main.main-content.container
     h2 Fill all the fields
     form.form(action='process_form.php' method='post')
@@ -86,9 +86,9 @@ footer.footer
             h3 About Us
             ul
                 li
-                    a(href='about-us.html') Our Story
+                    a(href='about-us') Our Story
                 li
-                    a(href='mission-vision.html') Our Mission and Vision
+                    a(href='mission-vision') Our Mission and Vision
                 // ...
         div
             h3 Support
