--- a/11-E-commerce/src/views/contact.pug
+++ b/11-E-commerce/src/views/contact.pug
@@ -1,30 +1,7 @@
-doctype html
-head
-    meta(charset='UTF-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title Guitar Store | E-commerce
-    link(rel='icon' href='/img/icon.png')
-    link(rel='preconnect' href='https://fonts.googleapis.com')
-    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
-    link(href='https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap' rel='stylesheet')
-    link(rel='stylesheet' href='/css/app.css')
-header
-    h1.title
-        span Guitar
-        |  Store
-nav.navigation
-    ul.container
-        li
-            a(href='/index') Home
-        li
-            a(href='/about') About Us
-        li
-            a(href='/products') Shop
-        li
-            a(href='/blog') Blog
-        li
-            a(href='/contact') Contact Us
-main.main-content.container
+extends ./layout/index
+
+block content
+    main.main-content.container
     h2 Fill all the fields
     form.form(action='process_form.php' method='post')
         fieldset
@@ -70,34 +47,3 @@ main.main-content.container
                     |               I agree to the Terms and Conditions
                     span.checkmark-checkbox
                 input.btn-form(type='submit' value='Submit Inquiry')
-footer.footer
-    .container.grid-footer
-        div
-            h3 Categories
-            ul
-                li
-                    a(href='#') Electric Guitars
-                li
-                    a(href='#') Acoustic Guitars
-                li
-                    a(href='#') Accessories
-                // ...
-        div
-            h3 About Us
-            ul
-                li
-                    a(href='about-us') Our Story
-                li
-                    a(href='mission-vision') Our Mission and Vision
-                // ...
-        div
-            h3 Support
-            ul
-                li
-                    a(href='#') Contact Us
-                li
-                    a(href='#') FAQ
-                li
-                    a(href='#') Shipping Information
-                // ...
-    p &copy; 2023 | Eder Benites
