--- a/11-E-commerce/src/views/about.pug
+++ b/11-E-commerce/src/views/about.pug
@@ -2,27 +2,26 @@ extends ./layout/index
 
 block content
     main.main-content.container
-    h2 About Us
-    .about-content
-    .image
-        img(src='./assets/img/about.webp' alt='About Us')
-    .about-info
-        p
-            | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            | voluptatum, voluptate, quibusdam, quia voluptas quod quos
-            | exercitationem voluptatibus quae doloribus quidem. Quisquam
-            | voluptatum, voluptate, quibusdam, quia voluptas quod quos
-            | exercitationem voluptatibus quae doloribus quidem.
-        p
-            | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            | voluptatum, voluptate, quibusdam, quia voluptas quod quos
-            | exercitationem voluptatibus quae doloribus quidem. Quisquam
-            | voluptatum, voluptate, quibusdam, quia voluptas quod quos
-            | exercitationem voluptatibus quae doloribus quidem.
-        p
-            | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-            | voluptatum, voluptate, quibusdam, quia voluptas quod quos
-            | exercitationem voluptatibus quae doloribus quidem. Quisquam
-            | voluptatum, voluptate, quibusdam, quia voluptas quod quos
-            | exercitationem voluptatibus quae doloribus quidem.
-
+        h2 About Us
+        .about-content
+            .image
+                img(src='/img/about.webp' alt='About Us')
+            .about-info
+                p
+                    | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                    | voluptatum, voluptate, quibusdam, quia voluptas quod quos
+                    | exercitationem voluptatibus quae doloribus quidem. Quisquam
+                    | voluptatum, voluptate, quibusdam, quia voluptas quod quos
+                    | exercitationem voluptatibus quae doloribus quidem.
+                p
+                    | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                    | voluptatum, voluptate, quibusdam, quia voluptas quod quos
+                    | exercitationem voluptatibus quae doloribus quidem. Quisquam
+                    | voluptatum, voluptate, quibusdam, quia voluptas quod quos
+                    | exercitationem voluptatibus quae doloribus quidem.
+                p
+                    | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                    | voluptatum, voluptate, quibusdam, quia voluptas quod quos
+                    | exercitationem voluptatibus quae doloribus quidem. Quisquam
+                    | voluptatum, voluptate, quibusdam, quia voluptas quod quos
+                    | exercitationem voluptatibus quae doloribus quidem.
