--- a/11-E-commerce/src/views/blog.pug
+++ b/11-E-commerce/src/views/blog.pug
@@ -8,7 +8,7 @@ block content
                 article.blog-article
                     h3 The Art of Guitar Setup: How to Get the Perfect Sound
                     .img-blog
-                        img(src='assets/img/blog-1.jpg' alt='Blog 1')
+                        img(src='/img/blog-1.jpg' alt='Blog 1')
                     .meta
                         p
                             | Date: 
@@ -28,7 +28,7 @@ block content
                 article.blog-article
                     h3 Exploring the World of Guitar Effects Pedals
                     .img-blog
-                        img(src='assets/img/blog-2.jpg' alt='Blog 2')
+                        img(src='/img/blog-2.jpg' alt='Blog 2')
                     .meta
                         p
                             | Date: 
@@ -48,7 +48,7 @@ block content
                 article.blog-article
                     h3 Famous Guitars in Rock History: Icons and Legends
                     .img-blog
-                        img(src='assets/img/blog-3.jpg' alt='Blog 3')
+                        img(src='/img/blog-3.jpg' alt='Blog 3')
                     .meta
                         p
                             | Date: 
