--- a/11-E-commerce/src/views/home.pug
+++ b/11-E-commerce/src/views/home.pug
@@ -7,15 +7,15 @@ block content
         .list-categories
             .category
                 .img
-                    img(src='./assets/img/category1.webp' alt='Electric Guitars')
+                    img(src='/img/category1.webp' alt='Electric Guitars')
                 a(href='') Electric Guitars
             .category
                 .img
-                    img(src='./assets/img/category2.webp' alt='Acoustic Guitars')
+                    img(src='/img/category2.webp' alt='Acoustic Guitars')
                 a(href='') Acoustic Guitars
             .category
                 .img
-                    img(src='./assets/img/category3.webp' alt='Accessories')
+                    img(src='/img/category3.webp' alt='Accessories')
                 a(href='') Accessories
     section.about-us
         .container.about-grid
@@ -32,7 +32,7 @@ block content
         h2 Our Products
         .list-products
             article.product
-                img.product-img(src='./assets/img/product18.png' alt='product 0')
+                img.product-img(src='/img/product18.png' alt='product 0')
                 .product-text
                     h3 Product 0
                     p
@@ -40,7 +40,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product2.webp' alt='product 2')
+                img.product-img(src='/img/product2.webp' alt='product 2')
                 .product-text
                     h3 Product 2
                     p
@@ -48,7 +48,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product11.webp' alt='product 1')
+                img.product-img(src='/img/product11.webp' alt='product 1')
                 .product-text
                     h3 Product 18
                     p
@@ -56,7 +56,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product4.webp' alt='product 4')
+                img.product-img(src='/img/product4.webp' alt='product 4')
                 .product-text
                     h3 Product 4
                     p
@@ -64,7 +64,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product3.webp' alt='product 3')
+                img.product-img(src='/img/product3.webp' alt='product 3')
                 .product-text
                     h3 Product 3
                     p
@@ -72,7 +72,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product17.png' alt='product 1')
+                img.product-img(src='/img/product17.png' alt='product 1')
                 .product-text
                     h3 Product 17
                     p
@@ -80,7 +80,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product5.webp' alt='product 5')
+                img.product-img(src='/img/product5.webp' alt='product 5')
                 .product-text
                     h3 Product 5
                     p
@@ -88,7 +88,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product14.webp' alt='product 5')
+                img.product-img(src='/img/product14.webp' alt='product 5')
                 .product-text
                     h3 Product 5
                     p
@@ -96,7 +96,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product15.webp' alt='product 6')
+                img.product-img(src='/img/product15.webp' alt='product 6')
                 .product-text
                     h3 Product 3
                     p
@@ -104,7 +104,7 @@ block content
                         | purus. Sed volutpat ac ligula ut lobortis. Aliquam erat volutpat.
                         | Morbi iaculis tempor eros, ac sagittis sem aliquet eu.
             article.product
-                img.product-img(src='./assets/img/product16.png' alt='product 6')
+                img.product-img(src='/img/product16.png' alt='product 6')
                 .product-text
                     h3 Product 3
                     p
