--- a/11-E-commerce/src/views/products.pug
+++ b/11-E-commerce/src/views/products.pug
@@ -5,7 +5,7 @@ block content
         h2 Explore Our Products
         .list-products-shop
             article.product-shop
-                img.product-img(src='assets/img/product10.png' alt='product 0')
+                img.product-img(src='/img/product10.png' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -17,7 +17,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product4.webp' alt='product 0')
+                img.product-img(src='/img/product4.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -29,7 +29,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product5.webp' alt='product 0')
+                img.product-img(src='/img/product5.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -41,7 +41,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product6.webp' alt='product 0')
+                img.product-img(src='/img/product6.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -53,7 +53,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product7.webp' alt='product 0')
+                img.product-img(src='/img/product7.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -65,7 +65,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product8.webp' alt='product 0')
+                img.product-img(src='/img/product8.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -77,7 +77,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product3.webp' alt='product 0')
+                img.product-img(src='/img/product3.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
@@ -89,7 +89,7 @@ block content
                         |  $100
                     a.btn.add-to-cart(href='#') Add to Cart
             article.product-shop
-                img.product-img(src='assets/img/product9.webp' alt='product 0')
+                img.product-img(src='/img/product9.webp' alt='product 0')
                 .product-shop-text
                     h3 Product 0
                     p
