refactor: Update image paths for lazy loading, fix header link, and improve code organization and consistency

--- a/11-E-commerce/src/views/partials/header.pug
+++ b/11-E-commerce/src/views/partials/header.pug
@@ -5,7 +5,7 @@ header
 nav.navigation
     ul.container.container-ul
         li
-            a(href='/home') Home
+            a(href='/') Home
         li
             a(href='/about') About Us
         li
