--- a/11-E-commerce/src/views/blog.pug
+++ b/11-E-commerce/src/views/blog.pug
@@ -5,66 +5,22 @@ block content
         h2 Our Blog
         section.blog-container
             .blog
-                article.blog-article
-                    h3 The Art of Guitar Setup: How to Get the Perfect Sound
-                    .img-blog
-                        img(src='/img/blog-1.jpg' alt='Blog 1')
-                    .meta
-                        p
-                            | Date: 
-                            span May 20, 2022
-                        p
-                            | Author: 
-                            span Eder Benites
-                    p.blog-text
-                        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-                        | voluptatum, voluptate, quibusdam, quia voluptas quod
-                        | exercitationem quos voluptatibus quae doloribus quidem
-                        | consequuntur. Quisquam voluptatum, voluptate, quibusdam, quia
-                        | voluptas quod exercitationem quos voluptatibus quae doloribus
-                        | quidem consequuntur.
-                    .btn-blog
-                        a.btn(href='#') Read More
-                article.blog-article
-                    h3 Exploring the World of Guitar Effects Pedals
-                    .img-blog
-                        img(src='/img/blog-2.jpg' alt='Blog 2')
-                    .meta
-                        p
-                            | Date: 
-                            span May 20, 2021
-                        p
-                            | Author: 
-                            span Jose Lujan
-                    p.blog-text
-                        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-                        | voluptatum, voluptate, quibusdam, quia voluptas quod
-                        | exercitationem quos voluptatibus quae doloribus quidem
-                        | consequuntur. Quisquam voluptatum, voluptate, quibusdam, quia
-                        | voluptas quod exercitationem quos voluptatibus quae doloribus
-                        | quidem consequuntur.
-                    .btn-blog
-                        a.btn(href='#') Read More
-                article.blog-article
-                    h3 Famous Guitars in Rock History: Icons and Legends
-                    .img-blog
-                        img(src='/img/blog-3.jpg' alt='Blog 3')
-                    .meta
-                        p
-                            | Date: 
-                            span Oct 30, 2023
-                        p
-                            | Author: 
-                            span Mike Towers
-                    p.blog-text
-                        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-                        | voluptatum, voluptate, quibusdam, quia voluptas quod
-                        | exercitationem quos voluptatibus quae doloribus quidem
-                        | consequuntur. Quisquam voluptatum, voluptate, quibusdam, quia
-                        | voluptas quod exercitationem quos voluptatibus quae doloribus
-                        | quidem consequuntur.
-                    .btn-blog
-                        a.btn(href='#') Read More
+                each blog in blogs
+                    article.blog-article
+                        h3= blog.title
+                        .img-blog
+                            img(src=`${blog.image}` alt=`${blog.title}`)
+                        .meta
+                            p
+                                | Date: 
+                                span= blog.date
+                            p
+                                | Author: 
+                                span= blog.author
+                        p.blog-text
+                            | #{blog.content}
+                        .btn-blog
+                            a.btn(href='#') Read More
             aside.aside
                 h3 Other Blog Posts
                 ul
@@ -76,3 +32,4 @@ block content
                         a(href='#') Unleashing Creative Soundscapes with Pedal Magic
                     li
                         a(href='#') Famous Guitars in Rock History: Icons and Legends
+
